summary statistics of each region

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -2,54 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "          Timestamp  GHI  DNI  DHI  ModA  ModB  Tamb    RH   WS  WSgust  \\\n",
-      "0  2021-08-09 00:01 -1.2 -0.2 -1.1   0.0   0.0  26.2  93.4  0.0     0.4   \n",
-      "1  2021-08-09 00:02 -1.1 -0.2 -1.1   0.0   0.0  26.2  93.6  0.0     0.0   \n",
-      "2  2021-08-09 00:03 -1.1 -0.2 -1.1   0.0   0.0  26.2  93.7  0.3     1.1   \n",
-      "3  2021-08-09 00:04 -1.1 -0.1 -1.0   0.0   0.0  26.2  93.3  0.2     0.7   \n",
-      "4  2021-08-09 00:05 -1.0 -0.1 -1.0   0.0   0.0  26.2  93.3  0.1     0.7   \n",
-      "\n",
-      "   WSstdev     WD  WDstdev   BP  Cleaning  Precipitation  TModA  TModB  \\\n",
-      "0      0.1  122.1      0.0  998         0            0.0   26.3   26.2   \n",
-      "1      0.0    0.0      0.0  998         0            0.0   26.3   26.2   \n",
-      "2      0.5  124.6      1.5  997         0            0.0   26.4   26.2   \n",
-      "3      0.4  120.3      1.3  997         0            0.0   26.4   26.3   \n",
-      "4      0.3  113.2      1.0  997         0            0.0   26.4   26.3   \n",
-      "\n",
-      "   Comments  \n",
-      "0       NaN  \n",
-      "1       NaN  \n",
-      "2       NaN  \n",
-      "3       NaN  \n",
-      "4       NaN  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# import sys\n",
-    "# import os\n",
+    "import sys\n",
+    "import os\n",
     "\n",
     "# Ensure you are in the correct directory\n",
-    "# os.chdir(r'G:\\Programming\\10_Academy\\solar_radiation_EDA')\n",
+    "os.chdir(r'G:\\Programming\\10_Academy\\solar_radiation_EDA')\n",
     "\n",
     "# Add the root directory to the Python path\n",
-    "# sys.path.append(os.getcwd())\n",
+    "sys.path.append(os.getcwd())\n",
     "from scripts.analysis_script import *\n",
     "\n",
-    "df =pd.read_csv('data/benin-malanville.csv')\n",
-    "print(df.head())"
+    "df_benin =pd.read_csv('data/benin-malanville.csv')\n",
+    "df_sierraleone =pd.read_csv('data/sierraleone-bumbuna.csv')\n",
+    "df_togo =pd.read_csv('data/togo-dapaong_qc.csv')\n",
+    "# print(df.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -104,12 +79,113 @@
       "25%        23.600000       NaN  \n",
       "50%        28.900000       NaN  \n",
       "75%        41.500000       NaN  \n",
-      "max        72.500000       NaN  \n"
+      "max        72.500000       NaN  \n",
+      "                 GHI            DNI            DHI           ModA  \\\n",
+      "count  525600.000000  525600.000000  525600.000000  525600.000000   \n",
+      "mean      201.957515     116.376337     113.720571     206.643095   \n",
+      "std       298.495150     218.652659     158.946032     300.896893   \n",
+      "min       -19.500000      -7.800000     -17.900000       0.000000   \n",
+      "25%        -2.800000      -0.300000      -3.800000       0.000000   \n",
+      "50%         0.300000      -0.100000      -0.100000       3.600000   \n",
+      "75%       362.400000     107.000000     224.700000     359.500000   \n",
+      "max      1499.000000     946.000000     892.000000    1507.000000   \n",
+      "\n",
+      "                ModB           Tamb             RH             WS  \\\n",
+      "count  525600.000000  525600.000000  525600.000000  525600.000000   \n",
+      "mean      198.114691      26.319394      79.448857       1.146113   \n",
+      "std       288.889073       4.398605      20.520775       1.239248   \n",
+      "min         0.000000      12.300000       9.900000       0.000000   \n",
+      "25%         0.000000      23.100000      68.700000       0.000000   \n",
+      "50%         3.400000      25.300000      85.400000       0.800000   \n",
+      "75%       345.400000      29.400000      96.700000       2.000000   \n",
+      "max      1473.000000      39.900000     100.000000      19.200000   \n",
+      "\n",
+      "              WSgust        WSstdev             WD        WDstdev  \\\n",
+      "count  525600.000000  525600.000000  525600.000000  525600.000000   \n",
+      "mean        1.691606       0.363823     133.044668       7.172220   \n",
+      "std         1.617053       0.295000     114.284792       7.535093   \n",
+      "min         0.000000       0.000000       0.000000       0.000000   \n",
+      "25%         0.000000       0.000000       0.000000       0.000000   \n",
+      "50%         1.600000       0.400000     161.500000       6.200000   \n",
+      "75%         2.600000       0.600000     234.100000      12.000000   \n",
+      "max        23.900000       4.100000     360.000000      98.400000   \n",
+      "\n",
+      "                  BP       Cleaning  Precipitation          TModA  \\\n",
+      "count  525600.000000  525600.000000  525600.000000  525600.000000   \n",
+      "mean      999.876469       0.000967       0.004806      32.504263   \n",
+      "std         2.104419       0.031074       0.047556      12.434899   \n",
+      "min       993.000000       0.000000       0.000000      10.700000   \n",
+      "25%       999.000000       0.000000       0.000000      23.500000   \n",
+      "50%      1000.000000       0.000000       0.000000      26.600000   \n",
+      "75%      1001.000000       0.000000       0.000000      40.900000   \n",
+      "max      1006.000000       1.000000       2.400000      72.800000   \n",
+      "\n",
+      "               TModB  Comments  \n",
+      "count  525600.000000       0.0  \n",
+      "mean       32.593091       NaN  \n",
+      "std        12.009161       NaN  \n",
+      "min        11.100000       NaN  \n",
+      "25%        23.800000       NaN  \n",
+      "50%        26.900000       NaN  \n",
+      "75%        41.300000       NaN  \n",
+      "max        70.400000       NaN  \n",
+      "                 GHI            DNI            DHI           ModA  \\\n",
+      "count  525600.000000  525600.000000  525600.000000  525600.000000   \n",
+      "mean      230.555040     151.258469     116.444352     226.144375   \n",
+      "std       322.532347     250.956962     156.520714     317.346938   \n",
+      "min       -12.700000       0.000000       0.000000       0.000000   \n",
+      "25%        -2.200000       0.000000       0.000000       0.000000   \n",
+      "50%         2.100000       0.000000       2.500000       4.400000   \n",
+      "75%       442.400000     246.400000     215.700000     422.525000   \n",
+      "max      1424.000000    1004.500000     805.700000    1380.000000   \n",
+      "\n",
+      "                ModB           Tamb             RH             WS  \\\n",
+      "count  525600.000000  525600.000000  525600.000000  525600.000000   \n",
+      "mean      219.568588      27.751788      55.013160       2.368093   \n",
+      "std       307.932510       4.758023      28.778732       1.462668   \n",
+      "min         0.000000      14.900000       3.300000       0.000000   \n",
+      "25%         0.000000      24.200000      26.500000       1.400000   \n",
+      "50%         4.300000      27.200000      59.300000       2.200000   \n",
+      "75%       411.000000      31.100000      80.800000       3.200000   \n",
+      "max      1367.000000      41.400000      99.800000      16.100000   \n",
+      "\n",
+      "              WSgust        WSstdev             WD        WDstdev  \\\n",
+      "count  525600.000000  525600.000000  525600.000000  525600.000000   \n",
+      "mean        3.229490       0.557740     161.741845      10.559568   \n",
+      "std         1.882565       0.268923      91.877217       5.915490   \n",
+      "min         0.000000       0.000000       0.000000       0.000000   \n",
+      "25%         1.900000       0.400000      74.800000       6.900000   \n",
+      "50%         2.900000       0.500000     199.100000      10.800000   \n",
+      "75%         4.400000       0.700000     233.500000      14.100000   \n",
+      "max        23.100000       4.700000     360.000000      86.900000   \n",
+      "\n",
+      "                  BP       Cleaning  Precipitation          TModA  \\\n",
+      "count  525600.000000  525600.000000  525600.000000  525600.000000   \n",
+      "mean      975.915242       0.000535       0.001382      32.444403   \n",
+      "std         2.153977       0.023116       0.026350      10.998334   \n",
+      "min       968.000000       0.000000       0.000000      13.100000   \n",
+      "25%       975.000000       0.000000       0.000000      23.900000   \n",
+      "50%       976.000000       0.000000       0.000000      28.400000   \n",
+      "75%       977.000000       0.000000       0.000000      40.600000   \n",
+      "max       983.000000       1.000000       2.300000      70.400000   \n",
+      "\n",
+      "               TModB  Comments  \n",
+      "count  525600.000000       0.0  \n",
+      "mean       33.543330       NaN  \n",
+      "std        12.769277       NaN  \n",
+      "min        13.100000       NaN  \n",
+      "25%        23.600000       NaN  \n",
+      "50%        28.400000       NaN  \n",
+      "75%        43.000000       NaN  \n",
+      "max        94.600000       NaN  \n"
      ]
     }
    ],
    "source": [
-    "print(summary_statistics(df))"
+    "#summary statistics of each column of each region\n",
+    "print(summary_statistics(df_benin))\n",
+    "print(summary_statistics(df_sierraleone))\n",
+    "print(summary_statistics(df_togo))"
    ]
   }
  ],
