data quality check

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -187,6 +187,95 @@
     "print(summary_statistics(df_sierraleone))\n",
     "print(summary_statistics(df_togo))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(Timestamp             0\n",
+      "GHI                   0\n",
+      "DNI                   0\n",
+      "DHI                   0\n",
+      "ModA                  0\n",
+      "ModB                  0\n",
+      "Tamb                  0\n",
+      "RH                    0\n",
+      "WS                    0\n",
+      "WSgust                0\n",
+      "WSstdev               0\n",
+      "WD                    0\n",
+      "WDstdev               0\n",
+      "BP                    0\n",
+      "Cleaning              0\n",
+      "Precipitation         0\n",
+      "TModA                 0\n",
+      "TModB                 0\n",
+      "Comments         525600\n",
+      "dtype: int64, GHI    258847\n",
+      "DNI    275987\n",
+      "DHI    259182\n",
+      "dtype: int64)\n",
+      "(Timestamp             0\n",
+      "GHI                   0\n",
+      "DNI                   0\n",
+      "DHI                   0\n",
+      "ModA                  0\n",
+      "ModB                  0\n",
+      "Tamb                  0\n",
+      "RH                    0\n",
+      "WS                    0\n",
+      "WSgust                0\n",
+      "WSstdev               0\n",
+      "WD                    0\n",
+      "WDstdev               0\n",
+      "BP                    0\n",
+      "Cleaning              0\n",
+      "Precipitation         0\n",
+      "TModA                 0\n",
+      "TModB                 0\n",
+      "Comments         525600\n",
+      "dtype: int64, GHI    261135\n",
+      "DNI    266352\n",
+      "DHI    263128\n",
+      "dtype: int64)\n",
+      "(Timestamp             0\n",
+      "GHI                   0\n",
+      "DNI                   0\n",
+      "DHI                   0\n",
+      "ModA                  0\n",
+      "ModB                  0\n",
+      "Tamb                  0\n",
+      "RH                    0\n",
+      "WS                    0\n",
+      "WSgust                0\n",
+      "WSstdev               0\n",
+      "WD                    0\n",
+      "WDstdev               0\n",
+      "BP                    0\n",
+      "Cleaning              0\n",
+      "Precipitation         0\n",
+      "TModA                 0\n",
+      "TModB                 0\n",
+      "Comments         525600\n",
+      "dtype: int64, GHI    257385\n",
+      "DNI         0\n",
+      "DHI         0\n",
+      "dtype: int64)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#data quality check \n",
+    "#missing values,negative values(that should be positive) in each region\n",
+    "print(data_quality_check(df_benin))\n",
+    "print(data_quality_check(df_sierraleone))\n",
+    "print(data_quality_check(df_togo))\n"
+   ]
   }
  ],
  "metadata": {
